fix step one of form on mobile

--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 100%;
+  width: 100%;
 }
 
 .form h1, .form h2 {
@@ -284,12 +285,21 @@
   padding: 15px;
 }
 
+@media only screen and (max-width: 675px) {
+  .product  {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
 /* style for notes/quantity area */
 .product-info {
   display: flex;
   flex-direction: column;
-  height: 250px;
-  width: 420px;
+  
+  /* height: 250px; */
+  /* width: 420px; */
   margin: 10px;
   color: black;
 }
@@ -304,6 +314,12 @@
   height: 300px;
   width: 300px;
   margin: 10px;
+}
+
+@media only screen and (max-width: 675px) {
+  .product-info {
+    align-items: center;
+  }
 }
 
 /************** QUANTITY **************/
@@ -333,6 +349,18 @@
   border-radius: 4px;
   height: 150px;
   width: 350px;
+}
+
+@media only screen and (max-width: 425px) {
+  .form textarea {
+    margin-top: 10px;
+    font-family: inherit;
+    font-size: 12pt;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    height: 150px;
+    width: 300px;
+  }
 }
 
 .form textarea::placeholder, .form input::placeholder {
