--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100%;
+  width: 100%;
 }
 
 #__next, #__next > div {
   height: 100%;
+  width: 100%;
 }
 
 a {
